# marketplace-backend

./: pyproject.toml
src/apps/bank/: admin.py  models.py
src/apps/shop/: admin.py  models.py
src/apps/users/: admin.py  manager.py  models.py  validators.py
src/core/settings/: base.py  development.py
